--- a/reporting/Lin_ST559_Project.Rmd
+++ b/reporting/Lin_ST559_Project.Rmd
@@ -192,10 +192,10 @@ p(x_i | y) = \int p(x_i,\theta|y) d\theta = \int p(x_i|\theta,y) p(\theta|y) d\t
 $$
 where $\theta_{-j} = (\theta_1,..., \theta_{j-1}, \theta_{j+1},...)$. The key feature of the INLA approach is to use the above form to construct nested approximations 
 $$
-\tilde{p}(\theta_j|y) = \int \tilde{p}(\theta|y) d\theta_{-j}, 
+\tilde{p}(\theta_j|y) = \int \mathbf{\tilde{p}(\theta|y)} d\theta_{-j}, 
 $$
 $$
-\tilde{p}(x_i | y) = \int \tilde{p}(x_i|\theta,y) \tilde{p}(\theta|y) d\theta, 
+\tilde{p}(x_i | y) = \int \mathbf{\tilde{p}(x_i|\theta,y)} \mathbf{\tilde{p}(\theta|y)} d\theta, 
 $$
 where $\tilde{p}(\cdot|\cdot)$ is an approximated conditional density of its arguments (Rue et al., 2009). Approximation to $p(\theta_j|y)$ is computed by integrating out the remaining parameters $\theta_{-j}$ from $\tilde{p}(\theta|y)$. Approximations to $p(x_i | y)$ are computed by approximating $p(\theta|y)$ and $p(x_i|\theta,y)$ and using numerical integration to integrate out $\theta$ (Rue et al., 2009). 
 
@@ -208,7 +208,7 @@ p(\theta|y) = \frac{p(x, \theta|y)} {p(x|\theta, y)}.
 $$
 Expanding the numerator and replacing the denominator with a Laplace approximation, then the above expression becomes 
 $$
-p(\theta|y) \propto \frac{p(\theta) p(x|\theta)  p(y|x,\theta)} {\tilde{p}{(x|\theta, y)}} \bigg|_{x=x^*(\theta)} = \tilde{p}(\theta|y), 
+p(\theta|y) \propto \frac{p(\theta) p(x|\theta)  p(y|x,\theta)} {\tilde{p}{(x|\theta, y)}} \bigg|_{x=x^*(\theta)} = \mathbf{\tilde{p}(\theta|y)}, 
 $$
 where $\tilde{p}{(x|\theta, y)}$ is the Gaussian approximation to the full conditional of $x$ and $x^*(\theta)$ is the mode of $x$ for a given $\theta$ (Rue et al., 2009, as cited in Morrison, 2017). 
 
@@ -242,7 +242,7 @@ Approximate the posterior marginals for the latent field is similar but more cha
 
 The posterior marginals for the latent field can be expressed as 
 $$
-p(x_i | y) = \int p(x_i|\theta,y) p(\theta|y) d\theta,
+p(x_i | y) = \int \mathbf{p(x_i|\theta,y)} \mathbf{p(\theta|y)} d\theta, 
 $$
 which results in two challenges: 
 
